--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.4.10",
     "@types/sequelize": "^4.28.10",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
@@ -46,17 +48,18 @@
     "ts-node": "^10.1.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5",
-    "@types/supertest": "^2.0.11"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    
+    "@types/uuid": "^8.3.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.5",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0"
   }
 }
